--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,13 @@
 title=Kunden
 appTitle=FioriDeepDive
 appDescription=App Description
+
+#App/Master-----------------------------
+app.customerid=Kundennummer
+app.firstname=Vorname
+app.lastname=Nachname
+app.title=Titel
+app.gender=Geschlecht
+app.email=Email
+app.phone=Phone
+app.website=Website
