--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -11,3 +11,7 @@ app.gender=Geschlecht
 app.email=Email
 app.phone=Phone
 app.website=Website
+
+#Buttons--------------------------------
+button.edit=Bearbeiten
+button.save=Speichern
