--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,6 +12,10 @@ app.email=Email
 app.phone=Phone
 app.website=Website
 
+#Main-----------------------------------
+main.title=Kunden\u00FCbersicht
+main.table.title=Kunden
+
 #Buttons--------------------------------
 button.edit=Bearbeiten
 button.save=Speichern
