--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -11,10 +11,14 @@ app.gender=Geschlecht
 app.email=Email
 app.phone=Phone
 app.website=Website
+app.delete=L\u00F6schen
 
 #Main-----------------------------------
 main.title=Kunden\u00FCbersicht
 main.table.title=Kunden
+dialog.delete=Soll der Kunde wirklich gel\u00F6scht werden?
+dialog.delete.success=Kunde wurde erfolgreich gel\u00F6scht!
+
 
 #Buttons--------------------------------
 button.edit=Bearbeiten
