--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -13,12 +13,14 @@ app.phone=Phone
 app.website=Website
 app.delete=L\u00F6schen
 
+gender.male=m\u00E4nnlich
+gender.female=weiblich
+
 #Main-----------------------------------
 main.title=Kunden\u00FCbersicht
 main.table.title=Kunden
 dialog.delete=Soll der Kunde wirklich gel\u00F6scht werden?
 dialog.delete.success=Kunde wurde erfolgreich gel\u00F6scht!
-
 
 #Buttons--------------------------------
 button.edit=Bearbeiten
