--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -22,6 +22,11 @@ main.table.title=Kunden
 dialog.delete=Soll der Kunde wirklich gel\u00F6scht werden?
 dialog.delete.success=Kunde wurde erfolgreich gel\u00F6scht!
 
+#Create---------------------------------
+create.title=Neuer Kunde
+
 #Buttons--------------------------------
 button.edit=Bearbeiten
 button.save=Speichern
+button.cancel=Abbrechen
+button.add=Hinzuf\u00FCgen
