Exercise 5.2 Part 3 - finished

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -22,8 +22,12 @@ main.table.title=Kunden
 dialog.delete=Soll der Kunde wirklich gel\u00F6scht werden?
 dialog.delete.success=Kunde wurde erfolgreich gel\u00F6scht!
 
+
 #Create---------------------------------
 create.title=Neuer Kunde
+dialog.create.success = Kunde wurde erfolgreich angelegt!
+dialog.update.success = Kunde wurde erfolgreich gespeichert!
+dialog.cancel=Bearbeiten abbrechen?
 
 #Buttons--------------------------------
 button.edit=Bearbeiten
