--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -27,6 +27,7 @@ dialog.delete.success=Kunde wurde erfolgreich gel\u00F6scht!
 create.title=Neuer Kunde
 dialog.create.success = Kunde wurde erfolgreich angelegt!
 dialog.update.success = Kunde wurde erfolgreich gespeichert!
+dialog.update.error=Kunde konnte nicht gespeichert werden!
 dialog.cancel=Bearbeiten abbrechen?
 
 #Buttons--------------------------------
